@@ -7,9 +7,6 @@ Class Start extends Controller {
         parent::__construct();
         parent::__global();
         
-        // loader::model('model_welcome', 'user');
-        // $this->user->get_data();
-        
     }                                      
     
     public function index()
