@@ -62,7 +62,7 @@ function base_register($class, $params_or_no_ins = '', $dir = '')
     switch ($dir)
     {
        case 'directory':
-       $path = DIR . $GLOBALS['d']. DS;
+       $path = APP .'directories'. DS . $GLOBALS['d']. DS;
          break;
          
        case 'app':
@@ -192,9 +192,9 @@ function register_autoload($real_name)
         
         // Local php5 libraries load support. 
         // -------------------------------------------------------------------- 
-        if(file_exists(DIR .$GLOBALS['d']. DS .'libraries'. DS .'php5'. DS .$class. EXT))
+        if(file_exists(APP .'directories'. DS .$GLOBALS['d']. DS .'libraries'. DS .'php5'. DS .$class. EXT))
         {
-            require(DIR .$GLOBALS['d']. DS .'libraries'. DS .'php5'. DS .$class. EXT);
+            require(APP .'directories'. DS .$GLOBALS['d']. DS .'libraries'. DS .'php5'. DS .$class. EXT);
             
             profiler_set('libraries', 'php5_local_'.$class.'_loaded', $class);
             return;
